--- a/public/dicasdiarias.html
+++ b/public/dicasdiarias.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Dicas Diárias - CESUPE | eproc</title>
+<title>Dica da Semana - CESUPE | eproc</title>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800;900&family=Open+Sans:wght@400;500;600&display=swap" rel="stylesheet">
 <style>
   :root {
@@ -175,7 +175,7 @@
   <div class="eproc-logo">eproc</div>
   <div class="header-content">
     <div class="header-badge">💡 Central de Conhecimento</div>
-    <h1>DICAS DIÁRIAS</h1>
+    <h1>DICA DA SEMANA</h1>
     <div class="header-sub">CESUPE • 2ª Instância • TJMG</div>
   </div>
 </header>
@@ -183,8 +183,8 @@
 <main class="container">
   <section class="intro-card">
     <div class="intro-icon">💡</div>
-    <h2 class="intro-title">Aprenda algo novo todo dia!</h2>
-    <p class="intro-text">Aqui você encontra todas as dicas sobre o <strong>eproc</strong> e demais sistemas. Clique em uma dica para ver o passo a passo interativo completo.</p>
+    <h2 class="intro-title">Aprenda algo novo toda semana!</h2>
+    <p class="intro-text">Aqui você encontra todas as dicas semanais sobre o <strong>eproc</strong> e demais sistemas. Clique em uma dica para ver o passo a passo interativo completo.</p>
   </section>
 
   <div class="dicas-grid">
@@ -204,7 +204,7 @@
     <div class="em-breve" data-dica>
       <span class="icon">🚀</span>
       <div class="title">Em breve, novas dicas!</div>
-      <div class="sub">Fique de olho — novas dicas são adicionadas regularmente.</div>
+      <div class="sub">Fique de olho — novas dicas são adicionadas semanalmente.</div>
     </div>
 
   </div>
